@@ -1,4 +1,3 @@
 FROM openjdk:21-jdk
-COPY target/demo.jar .
-EXPOSE 8080
-ENTRYPOINT ["java","-jar","/demo.jar"]
+COPY target/demo.jar demo.jar
+ENTRYPOINT ["java", "--enable-preview", "-jar", "/demo.jar"]
